--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                     <br />
                     <br />
                     <span style="font-size:50px ">Si cambias tu forma</span> <br>
-                    de ver las cosas
+                    de ver las cosass
                 </h1>
                 <p style="color: white; font-size: 20px;">veras que las cosas cambian.</p>
             </div>
