--- a/Views/Pacientes/Create.cshtml
+++ b/Views/Pacientes/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Registra nuevo paciente</h2>
 
 
 @using (Html.BeginForm()) 
@@ -84,7 +84,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.sucursal, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.sucursal, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(    model => model.sucursal     , new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.sucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
