--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -20,7 +20,7 @@
 
         if (usuario == "admin" && contraseña == "admin")
         {
-             Response.Redirect("~/Pacientes/index");
+             Response.Redirect("~/Pacientes/menu");
         }
         else
         {
