--- a/Views/Pacientes/Create.cshtml
+++ b/Views/Pacientes/Create.cshtml
@@ -145,7 +145,7 @@
 }
 
 <div>
-    @Html.ActionLink("Volver a la vista pacientes", "Index")
+    @Html.ActionLink("Ver pacientes", "Index")
 </div>
 
 @section Scripts {
