--- a/Views/Pacientes/Create.cshtml
+++ b/Views/Pacientes/Create.cshtml
@@ -18,7 +18,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-<div class="container">
+<div class="container" style="margin-bottom:20px; background:rgb(201, 255, 250)">
     <div class="row">
         <div class="col-sm">
 
