--- a/Views/Pacientes/Delete.cshtml
+++ b/Views/Pacientes/Delete.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Eliminar Registros</h2>
+<h2 style="color:red">Eliminar Registros</h2>
 
-<h3>¿Quieres eliminar el regirtro?</h3>
+<h3 style="color:red">Se eleimnara al paciente.</h3>
 <div>
-    <h4>Paciente</h4>
+    <h4 style="color:red">Paciente</h4>
     <hr />
 
-    <div class="container">
+    <div class="container alert alert-danger">
         <div class="row">
             <div class="col-sm" ">
                 <h4>Nombre</h4>
