--- a/Views/Pacientes/Edit.cshtml
+++ b/Views/Pacientes/Edit.cshtml
@@ -20,7 +20,7 @@
 
 
 
-<div class="container">
+<div class="container alert alert-warning" style="margin-bottom:20px">
     <div class="row">
         <div class="col-sm">
 
